tests/onlineboutique/connections_map_output_bool.txt
src: default/adservice-77d5cd745d-t8mx4, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: true
src: default/adservice-77d5cd745d-t8mx4, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/adservice-77d5cd745d-t8mx4, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: true
src: default/cartservice-74f56fd4b-8fjzp, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/cartservice-74f56fd4b-8fjzp, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: true
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/checkoutservice-69c8ff664b-x5bhp, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: true
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/currencyservice-77654bbbdd-kq4xj, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: true
src: default/emailservice-54c7c5d9d-vp27n, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/emailservice-54c7c5d9d-vp27n, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/frontend-99684f7f8-l7mqq, allowed conns: true
src: default/frontend-99684f7f8-l7mqq, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/frontend-99684f7f8-l7mqq, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: true
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/loadgenerator-555fbdc87d-cgxv8, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: true
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/paymentservice-bbcbdc6b6-87j92, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: true
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/productcatalogservice-68765d49b6-dkxzk, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: true
src: default/recommendationservice-5f8c456796-b594r, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/recommendationservice-5f8c456796-b594r, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/redis-cart-78746d49dc-5hk5z, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: true
src: default/redis-cart-78746d49dc-5hk5z, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/adservice-77d5cd745d-t8mx4, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/cartservice-74f56fd4b-8fjzp, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/checkoutservice-69c8ff664b-x5bhp, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/currencyservice-77654bbbdd-kq4xj, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/emailservice-54c7c5d9d-vp27n, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/frontend-99684f7f8-l7mqq, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/loadgenerator-555fbdc87d-cgxv8, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/paymentservice-bbcbdc6b6-87j92, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/productcatalogservice-68765d49b6-dkxzk, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/recommendationservice-5f8c456796-b594r, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/redis-cart-78746d49dc-5hk5z, allowed conns: false
src: default/shippingservice-5bd985c46d-mbb8l, dest: default/shippingservice-5bd985c46d-mbb8l, allowed conns: true
